mpdscribble 0.23 - not yet released
  * fix build failure with GLib < 2.16


mpdscribble 0.22 - 2011-07-09
  * curl: fix segmentation fault with large response body
  * curl: fix operation with threaded resolver
  * receive track ratings over the MPD client-to-client protocol


mpdscribble 0.21 - 2011-01-03
  * require libmpdclient 2.2
  * better HTTP error messages
  * curl: check the HTTP response status
  * file: ignore trailing whitespace
  * lmc: show real server address in verbose log message


mpdscribble 0.20 - 2010-09-22
  * curl: implement libCURL timeouts
  * curl: prevent recursive read calls
  * log: use ISO8601 date format
  * journal: don't save "(null)" values
  * scrobbler: submit track numbers
  * scrobbler: support logging to a file
  * scrobbler: fix memory leak in as_songchange()


mpdscribble 0.19 - 2009-12-26
  * using libmpdclient 2.0 instead of built-in libmpdclient


mpdscribble 0.18.1 - 2009-08-29
  * soup: explicitly link with libgthread
  * curl: use curl_escape() on GLib < 2.16
  * journal: don't warn if journal file is missing
  * use g_strerror() instead of strerror()


mpdscribble 0.18 - 2009-07-08
  * improved detection of repeated songs
  * support MPD's new MusicBrainz tags
  * CURL can be used instead of libsoup at compile time
  * removed the command line options --cache, --cache-interval, --sleep
  * support multiple scrobbler services (such as libre.fm)
  * schedule "now playing" after successful handshake
  * default to syslog
  * "cache" renamed to "journal" (optional now)
  * deprecated the "sleep" option


mpdscribble 0.17 - 2009-03-02
  * secure permissions for mpdscribble.conf
  * added "daemon_user" configuration option
  * escape '&'
  * import AS protocol v1.1 timestamps
  * support logging to stderr
  * add win32 support


mpdscribble 0.16 - 2009-01-17
  * support repeating a song
  * fix MPD 0.13 support (without "idle")
  * added pidfile support
  * daemonize mpdscribble by default, added option --no-daemon